CNCS Dev 12/src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Campus_Location__c</fullName>
        <formula>Region__r.Campus_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campus Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Number__c</fullName>
        <label>Class Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corps_Member_Arrival__c</fullName>
        <label>Corps Member Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation__c</fullName>
        <inlineHelpText>Corps Member Departure</inlineHelpText>
        <label>Graduation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Induction__c</fullName>
        <label>Member Induction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Region__r.Program_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <formula>Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Class</relationshipLabel>
        <relationshipName>Class</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Team_Leader_Arrival__c</fullName>
        <inlineHelpText>Class Year Start</inlineHelpText>
        <label>Team Leader Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Leader_Departure__c</fullName>
        <inlineHelpText>End of Class Year</inlineHelpText>
        <label>Team Leader Departure</label>
        <type>Date</type>
    </fields>
    <label>Class</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Class_Year_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Team_Leader_Arrival__c &gt;  Corps_Member_Arrival__c</errorConditionFormula>
        <errorMessage>Corps Member Arrival date cannot be Earlier Than Team Leader Arrival Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corps_Member_Arrival_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Corps_Member_Arrival__c &gt;  Member_Induction__c</errorConditionFormula>
        <errorMessage>Member Induction Date cannot be Earlier Than Corps Member Arrival Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Graduation_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Member_Induction__c &gt;  Graduation__c</errorConditionFormula>
        <errorMessage>Graduation Date cannot be Earlier Than Member Induction Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Leader_Departure_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Graduation__c &gt;  Team_Leader_Departure__c</errorConditionFormula>
        <errorMessage>Graduation Date cannot be Earlier Than Team Leader Departure Date</errorMessage>
    </validationRules>
</CustomObject>